--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </head>
 
-<body>
+<body id="main">
   <header>
-
+    <h1 id="title">Janelle Monae</h1>
   </header>
 
   <main>
+    <div id="img-div">
+      <img id="image" src="" alt="">
+      <p id="img-caption">Image description</p>
+    </div>
 
+    <article id="tribute-info">
+
+    </article>
+
+    <a id="tribute-link" href=""></a>
   </main>
 
   <footer>
