--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main>
     <div id="img-div">
-      <img id="image" src="" alt="">
+      <img id="image" src="images/janelle-monae.jpg" alt="portrait of Janelle Monae">
       <p id="img-caption">Image description</p>
     </div>
 
