--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
 <body id="main">
   <header>
     <h1 id="title">Janelle Monae</h1>
+    <h2>What can't she do?</h2>
   </header>
 
   <main>
     <div id="img-div">
       <img id="image" src="images/janelle-monae.jpg" alt="portrait of Janelle Monae">
-      <p id="img-caption">Image description</p>
+      <p id="img-caption">Janelle Monae at Paris Fashion Week Autumn/Winter 2019</p>
     </div>
 
     <article id="tribute-info">
-
+      <ul>
+        <li>Musician</li>
+        <li>Actress</li>
+        <li>Director</li>
+      </ul>
     </article>
 
-    <a id="tribute-link" href=""></a>
+    <h2>To learn more about Janelle Monae, visit her<a id="tribute-link" href="https://www.jmonae.com/"> official site.</a></h2>
   </main>
 
   <footer>
