--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="main">
   <header>
     <h1 id="title">Janelle Monae</h1>
-    <h2>What can't she do?</h2>
+    <h2>What <em>can't</em> she do?</h2>
   </header>
 
   <main>
@@ -22,13 +22,22 @@
 
     <article id="tribute-info">
       <ul>
-        <li>Musician</li>
-        <li>Actress</li>
-        <li>Director</li>
+        <li id="careers">Musician</li>
+          <ul>
+            <li>She won the GLAAD Media Award for Outstanding Music Artist for her Album Dirty Computer in 2019.</li>
+            <li>Besides her music, her <a href="https://youtu.be/pwnefUaKCbc">music videos</a> are performace art.</li>
+            <li>Her latest album was also turned into a short concept film called Dirty Computer which strings togethor the music videos.</li>
+          </ul>
+        <li id="careers">Actress</li>
+          <ul>
+            <li>She won the Screen Actors Guild Award for Outstanding Performance by an Ensemble Cast in a Motion Picture in 2017 for Hidden Figures.</li>
+            <li>She won the the Independent Spirit Robert Altman Award for Moonlight in 2017.</li>
+            <li>Right away in her film career, she was in Moonlight and Hidden Figures, two academy award winning films.</li>
+          </ul>
       </ul>
     </article>
 
-    <h2>To learn more about Janelle Monae, visit her<a id="tribute-link" href="https://www.jmonae.com/"> official site.</a></h2>
+    <h2>To learn more about her brilliance, visit Janelle Monae's<a id="tribute-link" href="https://www.jmonae.com/"> official site.</a></h2>
   </main>
 
   <footer>
