need to fix responsiveness

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
           </ul>
       </ul>
     </article>
-
-    <h2>To learn more about her brilliance, visit Janelle Monae's<a id="tribute-link" href="https://www.jmonae.com/"> official site.</a></h2>
   </main>
 
   <footer>
-
+    <h2>To learn more about her brilliance, visit Janelle Monae's<a id="tribute-link" href="https://www.jmonae.com/" target="-blank"> official site.</a></h2>
   </footer>
+
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
