--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <main>
     <div id="img-div">
-      <img id="image" src="images/janelle-monae.jpg" alt="portrait of Janelle Monae">
+      <img id="image" src="images/janelle-monae-quality.jpg" alt="portrait of Janelle Monae">
       <p id="img-caption">Janelle Monae at Paris Fashion Week Autumn/Winter 2019</p>
     </div>
 
@@ -39,7 +39,7 @@
   </main>
 
   <footer>
-    <h2>To learn more about her brilliance, visit Janelle Monae's<a id="tribute-link" href="https://www.jmonae.com/" target="-blank"> official site.</a></h2>
+    <h2>To learn more about her brilliance, visit Janelle Monae's<a id="tribute-link" href="https://www.jmonae.com/" target="_blank"> official site.</a></h2>
   </footer>
 
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
